--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,6 +37,18 @@ body {
   display: flex;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.View {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
 /* ///////////////// */
 /* GENERAL           */
 /* ///////////////// */
@@ -49,10 +61,11 @@ a:visited {
 /* SIDEBAR           */
 /* ///////////////// */
 .sidebar {
-  height: 93vh;
-  width: 66vh;
+  height: 100%;
+  width: 15%;
   flex-basis: 50rem;
   background-color: var(--color-dark--1);
+  /* float: left; */
   /* padding: 3rem 5rem 0rem 5rem; */
   display: flex;
   flex-direction: column;
@@ -259,10 +272,11 @@ a:visited {
 /* ///////////////// */
 /* MAP               */
 /* ///////////////// */
-#map {
-  flex: 1;
+.leaflet-container {
+  /* flex: 1; */
+  width: 85%;
   height: 100%;
-  background-color: var(--color-light--1);
+  /* background-color: var(--color-light--1); */
 }
 
 /* Popup width is defined in JS using options */
