--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,8 +65,7 @@ a:visited {
   width: 15%;
   flex-basis: 50rem;
   background-color: var(--color-dark--1);
-  /* float: left; */
-  /* padding: 3rem 5rem 0rem 5rem; */
+  border-radius: 1rem 0rem 0rem 1rem;
   display: flex;
   flex-direction: column;
 }
@@ -276,6 +275,7 @@ a:visited {
   /* flex: 1; */
   width: 85%;
   height: 100%;
+  border-radius: 0rem 1rem 1rem 0rem;
   /* background-color: var(--color-light--1); */
 }
 
