--- a/src/css/style.css
+++ b/src/css/style.css
@@ -271,9 +271,14 @@ a:visited {
 /* ///////////////// */
 /* MAP               */
 /* ///////////////// */
+#map {
+  width: 85%;
+  height: 100%;
+}
+
 .leaflet-container {
   /* flex: 1; */
-  width: 85%;
+  width: 100%;
   height: 100%;
   border-radius: 0rem 1rem 1rem 0rem;
   /* background-color: var(--color-light--1); */
