--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,6 +68,7 @@ a:visited {
   border-radius: 1rem 0rem 0rem 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -146,7 +147,7 @@ a:visited {
 }
 
 .btn.submit {
-  width: 37%;
+  width: 40%;
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
   margin: 0.5rem 0rem 0rem 0rem;
   border-radius: 0.5rem;
@@ -154,7 +155,7 @@ a:visited {
 }
 
 .btn.submit:hover {
-  width: 42%;
+  width: 45%;
 }
 
 .workout__icon {
@@ -176,18 +177,20 @@ a:visited {
 }
 
 .form {
+  width: 87%;
+  height: 30vh;
   background-color: var(--color-dark--2);
   border-radius: 5px;
-  padding: 1.5rem 2.75rem;
+  padding: 1.2rem 1.8rem;
   margin-bottom: 1.75rem;
 
   /* width: 150%; */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0.5rem 2.5rem;
+  gap: 1.2rem 1rem;
 
   /* Match height and activity boxes */
-  height: 15rem;
+  /* height: 15rem; */
   /* transition: all 0.5s, transform 1ms; */
   /* transition: ease-out 0.3s; */
 }
@@ -207,17 +210,18 @@ a:visited {
   transition: ease-out 0.3s, transform 1ms;
 }
 
-.form.hidden {
+/* .form.hidden {
   transform: translateY(-30rem);
   height: 0;
   padding: 0 2.25rem;
   margin-bottom: 0;
   opacity: 0;
-}
+} */
 
 .form__row {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .form__row--hidden {
@@ -225,14 +229,16 @@ a:visited {
 }
 
 .form__label {
-  flex: 0 0 50%;
-  font-size: 1.5rem;
+  width: 100%;
+  /* flex: 0 0 43%; */
+  font-size: 1.4rem;
   font-weight: 600;
+  padding-bottom: 0.15rem;
 }
 
 .form__input {
-  width: 100%;
-  padding: 0.3rem 1.1rem;
+  width: 90%;
+  padding: 0.3rem 0.8rem;
   font-family: inherit;
   font-size: 1.4rem;
   border: none;
@@ -246,9 +252,9 @@ a:visited {
   background-color: #fff;
 }
 
-.form__btn {
+/* .form__btn {
   display: none;
-}
+} */
 
 .copyright {
   margin: 0rem 5rem 3rem 5rem;
