--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,10 @@ a:visited {
 }
 
 .workouts {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   list-style: none;
   height: 77vh;
   overflow-y: scroll;
@@ -90,7 +94,7 @@ a:visited {
 }
 
 .workout {
-  /* width: 45rem; */
+  width: 87%;
   background-color: var(--color-dark--2);
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
@@ -100,7 +104,8 @@ a:visited {
   transition: ease-out 0.3s;
 
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 33% 33% 33%;
   /* gap: 0.75rem 1.5rem; */
 }
 .workout--running {
@@ -110,20 +115,36 @@ a:visited {
   border-left: 5px solid var(--color-brand--1);
 }
 
+.workout__header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .workout__title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90%;
   font-size: 1.7rem;
   font-weight: 600;
-  grid-column: 1 / -1;
 }
 
 .workout__delete-icon {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 10%;
+  text-align: end;
   height: 1.6rem;
-  grid-column: -1 / -1;
+  font-size: 1.5rem;
 }
 
 .workout__data {
   display: flex;
-  /* justify-content: ; */
+  align-items: center;
 }
 
 .workout__details {
@@ -133,15 +154,22 @@ a:visited {
 }
 
 .btn__container {
+  display: flex;
+  align-items: flex-end;
   grid-column: 1 / -1;
 }
 
-.btn {
-  width: 11%;
+.btn.workout__edit {
+  width: 13%;
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
   border-radius: 0.5rem;
   transition: ease-out 0.3s;
 }
+
+.btn.workout__edit:hover {
+  width: 15%;
+}
+
 .btn:hover {
   width: 13%;
 }
