--- a/src/css/style.css
+++ b/src/css/style.css
@@ -124,9 +124,7 @@ a:visited {
 }
 
 .workout__title {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  text-align: start;
   width: 90%;
   font-size: 1.7rem;
   font-weight: 600;
@@ -164,6 +162,7 @@ a:visited {
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
   border-radius: 0.5rem;
   transition: ease-out 0.3s;
+  cursor: pointer;
 }
 
 .btn.workout__edit:hover {
