--- a/src/css/style.css
+++ b/src/css/style.css
@@ -230,11 +230,16 @@ a:visited {
 }
 
 .form.edit {
-  height: 9.5rem;
-  grid-template-columns: -1fr;
-  padding: 1rem 0rem 0rem 0rem;
-  gap: 0.9rem 2.5rem;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0rem 1rem;
   transition: ease-out 0.3s, transform 1ms;
+}
+
+.form_row.edit {
+  height: 33%;
 }
 
 /* .form.hidden {
@@ -248,6 +253,7 @@ a:visited {
 .form__row {
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   flex-direction: column;
 }
 
