--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,8 +147,27 @@ a:visited {
 
 .workout__details {
   display: flex;
+  flex-direction: column;
   align-items: baseline;
-  margin: 1.5rem 2.5rem 1.7rem 0rem;
+  margin: 1.5rem 2.5rem 1.5rem 0rem;
+}
+
+.workout__icon {
+  font-size: 1.8rem;
+  margin-right: 0.2rem;
+  height: 0.28rem;
+}
+
+.workout__value {
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+.workout__unit {
+  font-size: 1.1rem;
+  color: var(--color-light--1);
+  text-transform: uppercase;
+  font-weight: 800;
 }
 
 .btn__container {
@@ -183,24 +202,6 @@ a:visited {
 
 .btn.submit:hover {
   width: 45%;
-}
-
-.workout__icon {
-  font-size: 1.8rem;
-  margin-right: 0.2rem;
-  height: 0.28rem;
-}
-
-.workout__value {
-  font-size: 1.5rem;
-  margin-right: 0.5rem;
-}
-
-.workout__unit {
-  font-size: 1.1rem;
-  color: var(--color-light--1);
-  text-transform: uppercase;
-  font-weight: 800;
 }
 
 .form {
