--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,14 +152,15 @@ a:visited {
   margin: 1.5rem 2.5rem 1.5rem 0rem;
 }
 
-.workout__icon {
-  font-size: 1.8rem;
+.workout__label {
+  font-size: 1.4rem;
+  color: var(--color-light--1);
   margin-right: 0.2rem;
-  height: 0.28rem;
+  height: 1.8rem;
 }
 
 .workout__value {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin-right: 0.5rem;
 }
 
@@ -168,6 +169,7 @@ a:visited {
   color: var(--color-light--1);
   text-transform: uppercase;
   font-weight: 800;
+  margin-left: 0.5rem;
 }
 
 .btn__container {
