--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,7 +198,7 @@ a:visited {
 }
 
 .btn.workout__edit:hover {
-  width: 15%;
+  width: 16%;
 }
 
 .btn:hover {
@@ -233,6 +233,15 @@ a:visited {
 }
 
 .form__row.btnSubmit {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  grid-column: span 2;
+}
+
+.form__row.edit.submit__edit {
   width: 100%;
   display: flex;
   flex-direction: row;
