--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,11 +81,11 @@ a:visited {
 
 .workouts {
   width: 100%;
+  height: 77vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   list-style: none;
-  height: 77vh;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -107,13 +107,12 @@ a:visited {
 
   transition: ease-out 0.3s;
 
-  display: grid;
+  /* display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%; */
   /* gap: 0.75rem 1.5rem; */
 
   overflow: auto;
-  position: relative;
   /* scroll-margin: 100px; */
   scroll-behavior: smooth;
 }
@@ -246,7 +245,7 @@ a:visited {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: flex-end;
+  align-items: center;
   grid-column: span 2;
 }
 
@@ -269,6 +268,17 @@ a:visited {
   /* transition: ease-out 0.3s; */
 }
 
+.form.edit {
+  width: 100%;
+  height: 24vh;
+  padding: 0rem;
+  margin: 0rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.7rem 0.5rem;
+  transition: ease-out 0.3s, transform 1ms;
+}
+
 .input__error__message {
   grid-column: 1 / -1;
   font-size: 1.3rem;
@@ -276,18 +286,16 @@ a:visited {
   padding: 0.5rem 0rem 0rem 0rem;
 }
 
-.form.edit {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0rem 1rem;
-  transition: ease-out 0.3s, transform 1ms;
+.input__error__message.edit {
+  grid-column: 1 / -1;
+  font-size: 1.3rem;
+  color: rgb(255, 136, 136);
+  padding: 0.5rem 0rem 0rem 0rem;
 }
 
-.form_row.edit {
+/* .form_row.edit {
   height: 33%;
-}
+} */
 
 /* .form.hidden {
   transform: translateY(-30rem);
