--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,7 +113,6 @@ a:visited {
   /* gap: 0.75rem 1.5rem; */
 
   overflow: auto;
-  /* scroll-margin: 100px; */
   scroll-behavior: smooth;
 }
 .workout--running {
@@ -254,7 +253,7 @@ a:visited {
   height: 30vh;
   background-color: var(--color-dark--2);
   border-radius: 5px;
-  padding: 1.2rem 1.8rem;
+  padding: 1.2rem 1.8rem 1.3rem 1.8rem;
   margin-bottom: 1.75rem;
 
   /* width: 150%; */
@@ -270,7 +269,7 @@ a:visited {
 
 .form.edit {
   width: 100%;
-  height: 24vh;
+  height: 18vh;
   padding: 0rem;
   margin: 0rem;
   display: grid;
