--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,7 +98,7 @@ a:visited {
 
 .workout {
   width: 87%;
-  height: auto;
+  /* height: 400px; */
   background-color: var(--color-dark--2);
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
@@ -112,7 +112,8 @@ a:visited {
   grid-template-rows: 33% 33% 33%; */
   /* gap: 0.75rem 1.5rem; */
 
-  overflow: auto;
+  /* overflow-x: auto; */
+  /* overflow-y: hidden; */
   scroll-behavior: smooth;
 }
 .workout--running {
@@ -149,8 +150,10 @@ a:visited {
 
 .workout__data {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
+  margin: 1.2rem 0rem 1.8rem 0rem;
 }
 
 .workout__details {
@@ -158,7 +161,7 @@ a:visited {
   flex-direction: column;
   align-items: baseline;
   flex-grow: 0;
-  margin: 1.5rem 2.5rem 1.5rem 0rem;
+  margin: 0.4rem 2.3rem 0rem 0rem;
 }
 
 .workout__label {
@@ -188,7 +191,7 @@ a:visited {
 }
 
 .btn.workout__edit {
-  width: 13%;
+  width: 5.4rem;
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
   border-radius: 0.5rem;
   transition: ease-out 0.3s;
@@ -196,7 +199,7 @@ a:visited {
 }
 
 .btn.workout__edit:hover {
-  width: 16%;
+  width: 6.2rem;
 }
 
 .btn:hover {
@@ -204,7 +207,7 @@ a:visited {
 }
 
 .btn.submit {
-  width: 20%;
+  width: 6.9rem;
   flex-grow: 0;
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
   margin: 0.5rem 0rem 0rem 0rem;
@@ -213,11 +216,11 @@ a:visited {
 }
 
 .btn.submit:hover {
-  width: 22%;
+  width: 7.7rem;
 }
 
 .btn.cancel {
-  width: 20%;
+  width: 6.9rem;
   flex-grow: 0;
   justify-self: flex-end;
   padding: 0.4rem 0.5rem 0.4rem 0.5rem;
@@ -227,7 +230,7 @@ a:visited {
 }
 
 .btn.cancel:hover {
-  width: 22%;
+  width: 7.7rem;
 }
 
 .form__row.btnSubmit {
@@ -250,7 +253,7 @@ a:visited {
 
 .form {
   width: 87%;
-  height: 30vh;
+  height: 27rem;
   background-color: var(--color-dark--2);
   border-radius: 5px;
   padding: 1.2rem 1.8rem 1.3rem 1.8rem;
@@ -269,7 +272,7 @@ a:visited {
 
 .form.edit {
   width: 100%;
-  height: 18vh;
+  height: 16rem;
   padding: 0rem;
   margin: 0rem;
   display: grid;
